# omnirt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.en.md  README.md  README.zh-CN.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.en.md  architecture.md  backend-ascend.en.md  backend-ascend.md  china-deployment.en.md  china-deployment.md  cli.md  getting-started.en.md  getting-started.md  index.en.md  index.md  interface-improvement-proposal.en.md  interface-improvement-proposal.md  model-onboarding.en.md  model-onboarding.md  model-support-roadmap.en.md  model-support-roadmap.md  presets.en.md  presets.md  publishing-docs.en.md  python-api.en.md  python-api.md  service-schema.en.md  support-status.en.md  support-status.md  vllm-omni-gap-roadmap.en.md  vllm-omni-gap-roadmap.md
docs/_generated/: models.en.md  models.md
docs/adr/: 0001-v0.1-scope.en.md  0001-v0.1-scope.md  0002-interface-improvements.en.md  0002-interface-improvements.md
docs/api_reference/: engine.en.md  engine.md  index.en.md  index.md  presets.en.md  presets.md  registry.en.md  registry.md  requests.en.md  requests.md  top_level.en.md  top_level.md  types.en.md  types.md  validation.en.md  validation.md
docs/artifacts/: benchmark_matrix.example.json
docs/cli_reference/: index.en.md  index.md
docs/community/: index.en.md  index.md  publishing_docs.en.md  publishing_docs.md  release-v0.1.0.en.md  release-v0.1.0.md
docs/developer_guide/: architecture.en.md  architecture.md  backend_onboarding.en.md  backend_onboarding.md  benchmark_baseline.en.md  benchmark_baseline.md  contributing.en.md  contributing.md  flashhead_benchmark.en.md  flashhead_benchmark.md  index.en.md  index.md  model_onboarding.en.md  model_onboarding.md
docs/getting_started/: quickstart.en.md  quickstart.md
docs/stylesheets/: extra.css
docs/user_guide/: index.en.md  index.md
docs/user_guide/deployment/: ascend.en.md  ascend.md  cuda.en.md  cuda.md  docker.en.md  docker.md  index.en.md  index.md
docs/user_guide/features/: dispatch_queue.en.md  dispatch_queue.md  index.en.md  index.md  runtime_profiles.en.md  runtime_profiles.md  service_schema.en.md  service_schema.md  telemetry.en.md  telemetry.md  validation.en.md  validation.md
docs/user_guide/generation/: image2image.en.md  image2image.md  image2video.en.md  image2video.md  index.en.md  index.md  talking_head.en.md  talking_head.md  text2audio.en.md  text2audio.md  text2image.en.md  text2image.md  text2video.en.md  text2video.md
docs/user_guide/models/: index.en.md  index.md  roadmap.en.md  roadmap.md  support_status.en.md  support_status.md  supported_models.en.md  supported_models.md
docs/user_guide/serving/: cli.en.md  cli.md  flashtalk_ws.en.md  flashtalk_ws.md  http_server.en.md  http_server.md  index.en.md  index.md  python_api.en.md  python_api.md  realtime_avatar_ws.en.md  realtime_avatar_ws.md
examples/integrations/agent-service/: README.md
examples/integrations/http-cli-demo/: README.md
examples/integrations/opentalking/: README.md
examples/profiles/: realtime-avatar-local.yaml
latest/api_reference/: index.html
latest/api_reference/engine/: index.html
latest/api_reference/presets/: index.html
latest/api_reference/registry/: index.html
latest/api_reference/requests/: index.html
latest/api_reference/top_level/: index.html
latest/api_reference/types/: index.html
latest/api_reference/validation/: index.html
latest/cli_reference/: index.html
latest/community/publishing_docs/: index.html
latest/developer_guide/: index.html
latest/developer_guide/architecture/: index.html
latest/developer_guide/backend_onboarding/: index.html
latest/developer_guide/benchmark_baseline/: index.html
latest/user_guide/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/api_reference/: index.html
main/cli_reference/: index.html
main/community/: index.html
main/developer_guide/: index.html
main/en/: index.html
main/javascript/: logo-theme.js
main/search/: search_index.json
main/stylesheets/: extra.css
main/user_guide/: index.html
model_backends/: README.md
model_backends/flashtalk/: README.md  flashtalk_ws_server.py  prepare_ascend_910b.sh  requirements-ascend.txt  runtime.ascend.yaml
model_backends/wav2lip/: wav2lip_ws_server.py
scripts/: __init__.py  bench_fasterliveportrait_ws.py  check_bilingual_parity.py  check_model_layout.py  generate_models_doc.py  prepare_model_snapshot.py  prepare_modelers_snapshot.py  prepare_modelscope_snapshot.py  start_flashtalk_ws.sh  start_quicktalk_ascend.sh  sync_model_dir.sh  uv_sync_fast.sh
src/omnirt/: __init__.py  __main__.py  api.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_error_paths.py  test_sdxl_ascend.py  test_sdxl_cuda.py  test_svd_ascend.py  test_svd_base_ascend.py  test_svd_base_cuda.py  test_svd_cuda.py
tests/parity/: test_modular_family_parity.py  test_parity.py
tests/unit/: test_adapters.py  test_api.py  test_backend_placeholders.py  test_backend_selection.py  test_backends.py  test_batcher.py  test_bench.py  test_bench_fasterliveportrait_ws.py  test_check_bilingual_parity.py  test_check_model_layout.py  test_cli.py  test_controller.py  test_engine.py  test_flashhead_pipeline.py  test_flashtalk_pipeline.py  test_flashtalk_ws_cli.py  test_flux2_pipeline.py  test_generate_models_doc.py  test_liveact_pipeline.py  test_modular_executor.py  test_otel.py  test_parity_metrics.py  test_prepare_modelers_snapshot.py  test_prepare_modelscope_snapshot.py  test_prometheus.py  test_quicktalk_dependencies.py  test_quicktalk_runtime.py  test_realtime_avatar.py  test_redis_store.py  test_registry.py  test_report.py  test_runtime_acceleration.py  test_runtime_capabilities.py  test_runtime_manager.py  test_sd15_pipeline.py  test_sdxl_dual_gpu.py  test_sdxl_pipeline.py  test_server.py  test_service_schemas.py  test_soulx_podcast_pipeline.py  (+9 more)
(+332 files in other folders)
