[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnirt"
version = "0.1.0a0"
description = "Digital-human-chain multimodal generation inference framework with CUDA and Ascend backends."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "datascale-ai" }
]
dependencies = [
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4.9",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "grpcio>=1.60",
  "protobuf>=5.26",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "grpcio-tools>=1.60",
  "pytest>=8.0",
  "torch>=2.1",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-static-i18n>=1.2",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-glightbox>=0.4",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.7",
]
runtime = [
  "diffusers>=0.37.1",
  "huggingface_hub>=0.20",
  "safetensors>=0.4",
  "torch>=2.1",
  "transformers>=4.51",
]
server = [
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "pydantic>=2.5",
  "sse-starlette>=2.0",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
omnirt = "omnirt.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-q"
