[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnirt"
version = "0.1.0a0"
description = "Digital-human-chain multimodal generation inference framework with CUDA and Ascend backends."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "datascale-ai" }
]
dependencies = [
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4.9",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "grpcio-tools>=1.60",
  "httpx>=0.26",
  "opencv-python-headless>=4.8",
  "pytest>=8.0",
  "torch>=2.1",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-static-i18n>=1.2",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-glightbox>=0.4",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.7",
]
runtime = [
  "diffusers>=0.37.1",
  "huggingface_hub>=0.20",
  "librosa>=0.10",
  "opencv-python-headless>=4.8",
  "safetensors>=0.4",
  "scipy>=1.10",
  "torch>=2.1",
  "transformers>=4.51",
]
asr = [
  "funasr>=1.2",
]
wav2lip-cuda = [
  "librosa>=0.10",
  "opencv-python-headless>=4.8",
  "scipy>=1.10",
  "torch>=2.1",
  "tqdm>=4.65",
]
quicktalk-cuda = [
  "insightface>=0.7",
  "onnxruntime>=1.18",
  "kornia>=0.7",
  "librosa>=0.10",
  "opencv-python-headless>=4.8",
  "scipy>=1.10",
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.51",
]
quicktalk-ascend = [
  "insightface>=0.7",
  "onnxruntime>=1.18",
  "kornia>=0.7",
  "librosa>=0.10",
  "opencv-python-headless>=4.8",
  "scipy>=1.10",
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.51",
]
quicktalk-converter = [
  "onnx>=1.16",
  "onnx2torch>=1.5",
  "onnxruntime>=1.18",
]
indextts = [
  "fastapi>=0.110",
  "pydantic>=2.5",
  "uvicorn[standard]>=0.27",
]
fasterliveportrait = [
  "ffmpeg-python>=0.2",
  "gradio>=5.0",
  "huggingface_hub>=0.20",
  "insightface>=0.7",
  "mediapipe>=0.10.21; python_version < '3.13' and platform_machine != 'aarch64'",
  "munch>=4.0",
  "omegaconf>=2.3",
  "onnx>=1.16",
  "onnxruntime-gpu>=1.18",
  "opencv-python-headless>=4.8",
  "scikit-image>=0.22",
  "soundfile>=0.12",
  "tensorrt-cu12==10.16.1.11; sys_platform == \"linux\" and platform_machine == \"x86_64\"",
  "tensorrt-cu12-bindings==10.16.1.11; sys_platform == \"linux\" and platform_machine == \"x86_64\"",
  "tensorrt-cu12-libs==10.16.1.11; sys_platform == \"linux\" and platform_machine == \"x86_64\"",
  "torch>=2.1",
  "torchaudio>=2.1",
  "torchgeometry>=0.1",
  "tqdm>=4.65",
  "transformers>=4.51",
]

server = [
  "grpcio>=1.60",
  "protobuf>=5.26",
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "pydantic>=2.5",
  "sse-starlette>=2.0",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
omnirt = "omnirt.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-q"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
tensorrt-cu12 = { index = "nvidia" }
tensorrt-cu12-bindings = { index = "nvidia" }
tensorrt-cu12-libs = { index = "nvidia" }
